# xss-receiver-rs

./: .dockerignore  .gitignore  Cargo.toml  README.en.md  README.md  config.toml  config_example.toml
.github/workflows/: docker.yml
docker/: Dockerfile  build.sh  config.toml  docker-compose.yml  download_ip2region.sh  init.sql
docs/superpowers/plans/: 2026-04-17-embed-frontend-in-rust-backend.md
docs/superpowers/specs/: 2026-04-16-embed-frontend-in-rust-backend-design.md
frontend/: package.json  pnpm-lock.yaml  vite.config.ts
frontend/docker/: build.sh  nginx.conf
frontend/src/: App.vue  monaco.ts  script-engine-types.ts
frontend/src/api/: dnsLog.ts  dnsRoute.ts  file.ts  httpLog.ts  httpRoute.ts  route.ts  systemLog.ts  user.ts
frontend/src/components/: AppNavbar.vue  ConfirmDialog.vue  MonacoEditor.vue  MonacoRawEditor.vue
frontend/src/config/: api.ts
frontend/src/router/: index.ts
frontend/src/stores/: user.ts
frontend/src/types/: api.ts  dnsLog.ts  dnsRoute.ts  file.ts  httpLog.ts  httpRoute.ts  monaco-json-contribution.d.ts
frontend/src/utils/: browserNotification.ts  encoding.ts  fileIcon.ts  request.ts
frontend/src/views/: DnsLogView.vue  DnsRouteView.vue  FileView.vue  HttpLogView.vue  HttpRouteView.vue  LoginView.vue  RouteView.vue  SystemLogView.vue  UserView.vue
migrations/2025-09-01-144426_init/: down.sql  up.sql
skills/xss-receiver/: SKILL.md  admin-api.md  script-engine.md
src/: main.rs  parsed_request.rs  startup_config.rs
src/controllers/: auth.rs  dns_log.rs  dns_route.rs  file.rs  frontend.rs  http_log.rs  http_route.rs  index.rs  mod.rs  route.rs  system_log.rs  user.rs
src/db/: helper.rs  mod.rs  model.rs  schema.rs
src/db/dns_log/: helper.rs  mod.rs  model.rs
src/db/dns_route/: helper.rs  model.rs
src/db/http_log/: helper.rs  model.rs
src/db/http_route/: helper.rs  model.rs
src/db/route/: helper.rs  model.rs
src/db/system_log/: helper.rs  mod.rs  model.rs
src/db/user/: helper.rs  model.rs
src/dispatcher/: dispatcher.rs  dns_route.rs  http_route.rs  mod.rs  route.rs  script_engine.rs
src/dispatcher/script_engine/: cache.rs  dns_request.rs  dns_response.rs  helpers.rs  http_request.rs  http_response.rs  mod.rs  request.rs  response.rs  storage.rs  utils.rs
src/storage/: log.rs  mod.rs  temp.rs  user.rs
src/utils/: diesel_bytea.rs  dns_server.rs  mod.rs  multimap.rs  parsed_request.rs  random.rs  upload.rs
src/utils/diesel_json/: mod.rs
src/utils/ip2region/: error.rs  mod.rs  (+3 more)
xss-receiver-rs-front/: .dockerignore  .env.development  .env.production  README.md  index.html  pnpm-lock.yaml  vite.config.ts
xss-receiver-rs-front/docker/: Dockerfile
xss-receiver-rs-front/src/: main.ts
(+44 files in other folders)
