[package]
name = "xss-receiver-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = "1.0.219"
serde_derive = "1.0.219"
tokio = { version = "1.45.0", features = ["full"] }
tokio-util = { version = "0.7.15", features = ["io"] }
axum = "0.8.4"
regex = "1.11.1"
once_cell = "1.21.3"
anyhow = "1.0.98"
async-trait = "0.1.88"
boa_engine = { version = "0.20.0", features = ["annex-b"] }
boa_gc = "0.20.0"