[package]
name = "xss-receiver-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
regex = "1.11.1"
once_cell = "1.21.3"
anyhow = "1.0.98"
async-trait = "0.1.88"
futures = "0.3.31"
multimap = "0.10.1"
toml = "0.8.22"

serde = "1.0.219"
serde_derive = "1.0.219"
serde_json = "1.0.140"
encoding_rs = "0.8.35"
form_urlencoded = "1.2.1"
multer = "3.1.0"

tokio = { version = "1.45.0", features = ["full"] }
tokio-util = { version = "0.7.15", features = ["io", "compat"] }
axum = "0.8.4"

boa_engine = { version = "0.20.0", features = ["annex-b"] }
boa_gc = "0.20.0"

diesel = "2.2.10"
diesel-async = { version = "0.5.2", features = ["postgres", "bb8"] }

[patch.crates-io]
http = { path = "thirdparty/http/" }
httparse = { path = "thirdparty/httparse/" }
