[package]
name = "xss-receiver-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
regex = "1.11.1"
once_cell = "1.21.3"
anyhow = "1.0.98"
thiserror = "2.0.16"
async-trait = "0.1.88"
futures = "0.3.31"
toml = "0.8.22"
password-auth = "1.0.0"
rand = "0.9.2"
log = "0.4.27"
env_logger = "0.11.8"
jsonwebtoken = "9.3.1"
chrono = { version = "0.4.41", features = ["serde"] }
base64 = "0.22.1"
urlencoding = "2.1"
sha1 = "0.10.6"
hex = "0.4.3"
mime_guess = "2.0.5"
rust-embed = "8"
num-derive = "0.4.2"
num-traits = "0.2.19"

serde = "1.0.219"
serde_derive = "1.0.219"
serde_json = "1.0.140"
encoding_rs = "0.8.35"
form_urlencoded = "1.2.1"
multer = "3.1.0"

tokio = { version = "1.45.0", features = ["full"] }
tokio-util = { version = "0.7.15", features = ["io", "compat"] }
axum = { version = "0.8.4", features = ["multipart"] }
axum-extra = { version = "0.12.5", features = ["cookie"] }

boa_engine = { version = "0.21.0", features = ["annex-b"] }
boa_gc = "0.21.0"

diesel = { version = "2.2.10", features = ["serde_json", "chrono"] }
diesel-async = { version = "0.5.2", features = ["postgres", "bb8"] }
diesel-enum = "0.2.1"

utoipa = { version = "5.4.0", features = ["axum_extras", "chrono"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum", "vendored"] }
utoipa-axum = "0.2.0"

[patch.crates-io]
http = { path = "thirdparty/http/" }
httparse = { path = "thirdparty/httparse/" }
